--- a/ekstra-komputer/materi.html
+++ b/ekstra-komputer/materi.html
@@ -2,128 +2,192 @@
 <html lang="id">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Mengenal Perangkat Komputer</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
+  <title>Materi Komputer</title>
 
-  <!-- Font Bebas Neue -->
-  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <!-- Font Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 
   <style>
-    :root {
-      --bg-url: url("https://i.imgur.com/ql2NCZ6.png");
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
     html, body {
       height: 100%;
-      margin: 0;
-      font-family: "Bebas Neue", sans-serif;
-      background-image: var(--bg-url);
-      background-size: 100% auto;
-      background-position: top center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-color: #0f172a;
-      display: flex;
-      align-items: flex-start;
-      justify-content: flex-start;
-      text-align: left;
+      font-family: 'Poppins', sans-serif;
+      overflow: hidden;
     }
 
-    .judul-container {
-      display: flex;
-      align-items: flex-start;
-      gap: 9vw;
-      margin-top: 73vh;
-      margin-left: 4vw;
+    body {
+      position: relative;
+      background-color: black;
+      color: #003366;
+      transition: all 0.5s ease;
     }
 
-    .kanan {
-      display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-      gap: 5vw;
-    }
-
-    .subkanan {
-      display: flex;
-      flex-direction: column;
-      gap: 1vh;
-      margin-left: 3vw;
-      margin-top: -4vh;
-    }
-
-    h1, h2, h3 {
-      font-size: clamp(1rem, 1.8vw, 2rem);
-      font-weight: 400;
-      line-height: 1.1;
-      letter-spacing: 3px;
-      text-transform: uppercase;
-      color: #0a2a6b;
-      text-shadow: 2px 2px 8px rgba(255,255,255,0.3);
-      margin: 0;
-    }
-
-    /* 🔹 Gaya untuk gambar menuju judul.html di tengah bawah (lebih ke bawah) */
-    .link-gambar {
+    /* ====== GAMBAR BACKGROUND RESPONSIF ====== */
+    body::before {
+      content: "";
       position: fixed;
-      bottom: 1vh; /* 🔹 digeser ke bawah sedikit */
-      left: 50%;
-      transform: translateX(-50%);
-      transition: transform 0.3s ease;
+      inset: 0;
+      background-image: url("https://i.imgur.com/bEdb3LX.png"); /* 📱 HP Portrait */
+      background-size: cover;
+      background-position: center;
+      z-index: -2;
+      transition: background-image 0.5s ease;
+    }
+
+    @media (orientation: landscape) and (max-width: 1023px) {
+      body::before {
+        background-image: url("https://i.imgur.com/EHLPGZZ.png"); /* 📱 HP Landscape */
+      }
+    }
+
+    @media (min-width: 1024px) {
+      body::before {
+        background-image: url("https://i.imgur.com/XN5i5jT.png"); /* 💻 Laptop */
+      }
+    }
+
+    /* ====== KONTAINER TOMBOL UTAMA ====== */
+    .tombol-container {
+      position: fixed;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 25px;
       z-index: 10;
+      width: 100%;
+      height: 100%;
     }
 
-    .link-gambar img {
-      width: 90px;
+    .tombol {
+      width: 180px;
       height: auto;
+      cursor: pointer;
+      transition: all 0.4s ease;
+      opacity: 0.9;
     }
 
-    .link-gambar:hover {
-      transform: translateX(-50%) scale(1.1);
+    .tombol:hover {
+      transform: scale(1.08);
+      opacity: 1;
     }
 
-    @media (max-width: 600px) {
-      .judul-container {
+    /* 💻 ====== PENGATURAN UNTUK LAPTOP ====== */
+    @media (min-width: 1024px) {
+      .tombol-container {
+        justify-content: flex-start;
+        align-items: flex-end;
+        left: 80px;
+        bottom: 200px;
+        gap: 80px;
+      }
+      .tombol {
+        width: 320px;
+      }
+
+      /* 💻 Tombol home di tengah bawah, digeser lebih ke bawah */
+      .tombol-tengah-bawah {
+        position: fixed;
+        bottom: 30px; /* ⬇️ digeser lebih ke bawah dari sebelumnya (60px → 30px) */
+        left: 50%;
+        transform: translateX(-50%);
+        width: 150px;
+        cursor: pointer;
+        opacity: 0.9;
+        transition: all 0.4s ease;
+        z-index: 20;
+      }
+
+      .tombol-tengah-bawah:hover {
+        transform: translateX(-50%) scale(1.1);
+        opacity: 1;
+      }
+    }
+
+    /* 📱 ====== HP LANDSCAPE ====== */
+    @media (orientation: landscape) and (max-width: 1023px) {
+      .tombol-container {
+        justify-content: flex-start;
+        left: 25px;
+      }
+
+      .tombol {
+        width: 200px; /* diperbesar di mode landscape */
+      }
+
+      .tombol:nth-child(2) {
+        transform: translateX(25px);
+      }
+
+      .tombol:nth-child(3) {
+        transform: translateX(45px);
+      }
+
+      /* 📱 Tombol home di tengah bawah — diperkecil dan digeser ke bawah */
+      .tombol-tengah-bawah {
+        position: fixed;
+        bottom: 10px; /* ⬇️ digeser lebih ke bawah dari sebelumnya (35px → 20px) */
+        left: 50%;
+        transform: translateX(-50%);
+        width: 80px; /* 📏 diperkecil dari 100px → 80px */
+        opacity: 0.9;
+        z-index: 20;
+        transition: all 0.4s ease;
+        cursor: pointer;
+      }
+
+      .tombol-tengah-bawah:hover {
+        transform: translateX(-50%) scale(1.1);
+        opacity: 1;
+      }
+    }
+
+    /* 📱 ====== HP PORTRAIT ====== */
+    @media (orientation: portrait) and (max-width: 768px) {
+      .tombol-container {
         flex-direction: column;
-        margin-top: 65vh;
-        margin-left: 8vw;
-        gap: 1vh;
+        justify-content: center;
+        align-items: center;
+        gap: 25px;
+      }
+      .tombol {
+        width: 180px;
       }
 
-      .kanan {
-        flex-direction: column;
-        gap: 1vh;
+      /* 📱 Tombol home di tengah bawah — tetap ukuran sedang */
+      .tombol-tengah-bawah {
+        position: fixed;
+        bottom: 40px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 90px;
+        opacity: 0.9;
+        z-index: 20;
+        transition: all 0.4s ease;
+        cursor: pointer;
       }
 
-      h1, h2, h3 {
-        font-size: 1rem;
-      }
-
-      .subkanan {
-        margin-top: -3vh;
-      }
-
-      .link-gambar img {
-        width: 70px;
+      .tombol-tengah-bawah:hover {
+        transform: translateX(-50%) scale(1.1);
+        opacity: 1;
       }
     }
   </style>
 </head>
 <body>
-  <!-- 🔹 Gambar menuju ke judul.html (diletakkan di tengah bawah sedikit lebih ke bawah) -->
-  <a href="judul.html" class="link-gambar">
-    <img src="https://i.imgur.com/Nc3RsIH.png" alt="Kembali ke Judul">
+
+  <!-- 🔹 TIGA TOMBOL UTAMA 🔹 -->
+  <div class="tombol-container">
+    <img src="https://i.imgur.com/3HmvYZA.png" alt="Tombol 1" class="tombol">
+    <img src="https://i.imgur.com/W9dsGDG.png" alt="Tombol 2" class="tombol">
+    <img src="https://i.imgur.com/ipVy8cM.png" alt="Tombol 3" class="tombol">
+  </div>
+
+  <!-- 🔹 TOMBOL HOME (TENGAH BAWAH) MENUJU DAFTAR ISI 🔹 -->
+  <a href="daftar-isi.html">
+    <img src="https://i.imgur.com/Nc3RsIH.png" alt="Tombol Home" class="tombol-tengah-bawah">
   </a>
 
-  <div class="judul-container">
-    <h1>Mengenal Perangkat Komputer</h1>
-    <div class="kanan">
-      <h2>Perangkat Lunak Pengolah Kata</h2>
-      <div class="subkanan">
-        <h3>Menggunakan Perangkat Lunak</h3>
-        <h3>Pengolah Kata</h3>
-      </div>
-    </div>
-  </div>
 </body>
 </html>
