--- a/ekstra-komputer/perangkat.html
+++ b/ekstra-komputer/perangkat.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>Materi Perangkat Komputer</title>
 
-  <!-- Font Poppins -->
+  <!-- 🎨 Font Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
 
   <style>
@@ -32,22 +32,18 @@
       background-image: url("https://i.imgur.com/LAgmIsm.png"); /* 📱 HP Portrait */
       background-size: cover;
       background-position: center;
-      z-index: -2;
+      z-index: -1; /* 🔧 supaya tombol di atas */
       transition: background-image 0.5s ease;
     }
 
     /* 📱 HP LANDSCAPE */
     @media (orientation: landscape) and (max-width: 1023px) {
-      body::before {
-        background-image: url("https://i.imgur.com/txA0rI8.png");
-      }
+      body::before { background-image: url("https://i.imgur.com/txA0rI8.png"); }
     }
 
     /* 💻 LAPTOP */
     @media (min-width: 1024px) {
-      body::before {
-        background-image: url("https://i.imgur.com/MjiFXeU.png");
-      }
+      body::before { background-image: url("https://i.imgur.com/MjiFXeU.png"); }
     }
 
     /* 🔘 ====== KONTAINER TOMBOL ====== */
@@ -55,10 +51,10 @@
       position: fixed;
       width: 100%;
       height: 100%;
-      z-index: 10;
+      z-index: 5;
     }
 
-    /* 🌟 ====== GAYA UMUM SEMUA TOMBOL ====== */
+    /* 🌟 ====== GAYA UMUM UNTUK SEMUA TOMBOL ====== */
     .tombol {
       width: 4cm;
       cursor: pointer;
@@ -66,6 +62,7 @@
       opacity: 0.9;
       filter: drop-shadow(0 0 6px rgba(255,255,255,0.3));
       position: absolute;
+      z-index: 6; /* 🔧 tombol utama bisa diklik */
     }
 
     .tombol:hover {
@@ -74,7 +71,7 @@
       filter: drop-shadow(0 0 15px rgba(255,255,255,0.8));
     }
 
-    /* 💻 ====== LAPTOP ====== */
+    /* 💻 ====== TATA LETAK UNTUK LAPTOP ====== */
     @media (min-width: 1024px) {
       .tombol { width: 3cm; }
       .tombol[alt="Fungsi"] { left: 8.8cm; top: 10cm; }
@@ -82,38 +79,49 @@
       .tombol[alt="Jenis"] { left: 20cm; top: 5cm; }
       .tombol[alt="Merawat"] { left: 20cm; top: 10cm; }
 
-      /* 🏠 Tombol Home di kanan bawah laptop */
-      .tombol-tengah-bawah {
+      .tombol-tengah-bawah,
+      .tombol-back {
         position: fixed;
         bottom: 2cm;
-        right: 2cm;
         width: 2cm;
         transition: all 0.4s ease;
+        z-index: 10; /* 🔧 tombol link di atas segalanya */
+        cursor: pointer;
       }
-      .tombol-tengah-bawah:hover { transform: scale(1.1); }
+
+      .tombol-tengah-bawah { right: 2cm; }
+      .tombol-back { left: 2cm; }
+
+      .tombol-tengah-bawah:hover,
+      .tombol-back:hover {
+        transform: scale(1.1);
+      }
     }
 
     /* 📱 ====== HP LANDSCAPE ====== */
     @media (orientation: landscape) and (max-width: 1023px) {
       .tombol { width: 2cm; }
 
-      /* 📍 Posisi tombol lainnya (TETAP SAMA seperti semula) */
       .tombol[alt="Pengertian"] { top: 2cm; left: 5cm; }
       .tombol[alt="Fungsi"] { top: 5cm; left: 5cm; }
       .tombol[alt="Jenis"] { top: 2cm; left: 11.5cm; }
       .tombol[alt="Merawat"] { top: 5cm; left: 11.5cm; }
 
-      /* 🏠 Tombol Home digeser ke kanan dan ke atas */
-      .tombol-tengah-bawah {
+      .tombol-tengah-bawah,
+      .tombol-back {
         position: fixed;
-        bottom: 1cm;   /* ⬆️ sebelumnya 0.8cm → sekarang lebih ke atas */
-        right: 1.8cm;    /* ⬅️ sebelumnya di tengah → sekarang di kanan */
-        width: 1.5cm;  /* ukuran tombol */
+        bottom: 1cm;
+        width: 1.5cm;
         transition: all 0.4s ease;
+        z-index: 10;
+        cursor: pointer;
       }
 
-      /* Efek hover agar tetap halus */
-      .tombol-tengah-bawah:hover { transform: scale(1.1); }
+      .tombol-tengah-bawah { right: 1.8cm; }
+      .tombol-back { left: 1.8cm; }
+
+      .tombol-tengah-bawah:hover,
+      .tombol-back:hover { transform: scale(1.1); }
     }
 
     /* 📱 ====== HP PORTRAIT ====== */
@@ -125,15 +133,25 @@
       .tombol[alt="Jenis"] { top: 12cm; left: 0.2cm; }
       .tombol[alt="Merawat"] { top: 12cm; left: 7cm; }
 
-      /* 🏠 Tombol Home di tengah bawah (untuk portrait) */
-      .tombol-tengah-bawah {
+      .tombol-tengah-bawah,
+      .tombol-back {
         position: fixed;
         bottom: 1cm;
+        width: 1.5cm;
+        transition: all 0.4s ease;
+        z-index: 10;
+        cursor: pointer;
+      }
+
+      .tombol-tengah-bawah {
         left: 50%;
         transform: translateX(-50%);
-        width: 1.5cm;
       }
+
+      .tombol-back { left: 1cm; }
+
       .tombol-tengah-bawah:hover { transform: translateX(-50%) scale(1.1); }
+      .tombol-back:hover { transform: scale(1.1); }
     }
   </style>
 </head>
@@ -150,6 +168,11 @@
   <!-- 🏠 Tombol Home -->
   <a href="daftar-isi.html">
     <img src="https://i.imgur.com/Nc3RsIH.png" alt="Tombol Home" class="tombol-tengah-bawah" title="Kembali ke Daftar Isi">
+  </a>
+
+  <!-- ⬅️ Tombol Back -->
+  <a href="materi.html">
+    <img src="https://i.imgur.com/QEJbOve.png" alt="Tombol Back" class="tombol-back" title="Kembali ke Halaman Materi">
   </a>
 
 </body>
